# forge-benchmark

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: forge_queries.jsonl
data/clean_bundles/: README.md  apparel_basics_01.json  apparel_basics_02.json  apparel_basics_03.json  apparel_basics_04.json  apparel_basics_05.json  apparel_basics_06.json  apparel_basics_07.json  apparel_basics_08.json  apparel_basics_09.json  apparel_basics_10.json  apparel_basics_11.json  apparel_basics_12.json  apparel_basics_13.json  apparel_basics_14.json  apparel_basics_15.json  bags_shoes_01.json  bags_shoes_02.json  bags_shoes_03.json  bags_shoes_04.json  bags_shoes_05.json  bags_shoes_06.json  bags_shoes_07.json  bags_shoes_08.json  bags_shoes_09.json  bags_shoes_10.json  bags_shoes_11.json  bags_shoes_12.json  bags_shoes_13.json  bags_shoes_14.json  bags_shoes_15.json  camping_gear_01.json  camping_gear_02.json  camping_gear_03.json  camping_gear_04.json  camping_gear_05.json  camping_gear_06.json  camping_gear_07.json  camping_gear_08.json  camping_gear_09.json  (+186 more)
data/results/: forge_results.jsonl
examples/: quickstart.py
forge/: __init__.py  eval.py  fetch.py  loaders.py  metric.py  pollute.py
